# clear_pycache

./: .gitignore  clear_pycache.py  pyproject.toml
